--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,9 +11,10 @@ security.oauth2.client.scope=openid,email,profile
 security.oauth2.client.accessTokenUri=https://www.googleapis.com/oauth2/v4/token
 security.oauth2.client.userAuthorizationUri=https://accounts.google.com/o/oauth2/v2/auth
 security.oauth2.resource.userInfoUri=https://www.googleapis.com/oauth2/v3/userinfo
-spring.security.oauth2.client.registration.google.redirectUri=/oauth2/callback/{registrationId}
 security.oauth2.resource.preferTokenInfo=true
 spring.main.allow-bean-definition-overriding=true
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.security=DEBUG
 
 server.port=8080
 
